final update on landmark page of coit tower

--- a/fog/landmarks/coit.html
+++ b/fog/landmarks/coit.html
@@ -53,17 +53,19 @@
                         </div>
                         <div class="col-12">
                         <h6><i class="sf sf-right-arrow infoicon"></i> Where to Park </h6>
-                        <p>  Free parking is available along Palace Drive, Yacht Drive, and on Bay and Lyon streets but expect weekends to be crowded. </p>
+                        <p>  Parking at the tower is very limited, and at peak times the line of cars waiting to reach the lot can be very long. </p>
                         </div>
                        
                     </div>
 
                     <div class=" col-5 offset-2">
                           <h6><i class="sf sf-right-arrow infoicon"></i> Public Transportation </h6>
-                        <p>  Coit Tower is easily accessible by San Francisco Muni buses #30, #43, #28, and #29. Muni bus lines #22, #41, and #45 also stop in the vicinity. From Fisherman’s Wharf take the #30 Stockton bus. For more information, call Muni at <b>415-673-6864</b> or check the <a href="#"> SFMTA trip planner.</a> </p>
+                        <p> Coit Tower is reachable by San Francisco Muni. Muni’s #39 Coit bus travels between Coit Tower and Fisherman’s Wharf.  For more information, call Muni at <b>415-673-6864</b> or check the <a href="#"> SFMTA trip planner.</a> </p>
 
                         <h6><i class="sf sf-right-arrow infoicon"></i> What to bring and what to wear </h6>
-                        <p>  A picnic is a nice addition to this artsy day. Pack up some food and drink and enjoy a day in the park with the kids. Because you’ll be going inside and out, you’ll want to bring layers to be prepared for all weather conditions. Snacks and a camera are also recommended.</p>
+                        <p>  For a scenic hike to the tower, climb Telegraph Hill’s eastern slope via the Filbert Street stairs, which pass through the Grace Marchant Garden, or the Greenwich Street stairs.
+
+</p>
                     
                         <h6><i class="sf sf-right-arrow infoicon"></i> Map</h6>
                         <a href="#" class="toggle-map menu-bottom">Click to see this location on a map</h6></a>
