fixed awkward ggb, fixed typo

--- a/fog/index.html
+++ b/fog/index.html
@@ -30,7 +30,6 @@
 		<!--<div id="menuToggle">&Xi;</div>
      </nav> -->
 <!--END OF NAV-->
-    <div id="position-log">0</div>
     <div class="project-wrap">
     <div class="skrollr-wrapper">
         <section id="home" class="homeSlide">
@@ -98,7 +97,7 @@
                     data-anchor-target="#home"
                 >
                    <div class="text">
-                    <h1>Embacadero</h1>
+                    <h1>Embarcadero</h1>
                     <a class="btn" href="landmarks/embarcadero.html">Learn More</a>
                     </div><!--text-->
                     <div class="landmark">
