Final tweaks to the code, text, and slight styling changes

--- a/fog/landmarks/coit.html
+++ b/fog/landmarks/coit.html
@@ -24,7 +24,7 @@
                     data-anchor-target="#coit-home"
                 ><img src="../lib/images/coit-inner.jpg"></div>
                 <a class="btn" href="../index.html#coit"><i class="sf sf-left-arrow backicon"></i> Go Back</a>
-                <div class="content" data--100-top="opacity:0;" data-100="opacity:1";>
+                <div class="content" data--150-top="opacity:0;" data-100="opacity:1";>
                     <div class="container">
                     <h1 class="neighborhoodtitle"><i class="sf sf-coit-tower nbhdicon"></i> Coit Tower</h1>
                     <div class="neighborhood">
@@ -40,14 +40,14 @@
                 <div class="content">
                 <div class="container">
                     <div class=" col-5">
-                        <div class="col-12">
+                        <div class="col-12 neigborhoodsection">
                             <h6><i class="sf sf-right-arrow infoicon"></i> When to Go </h6>
                              <p> Coit Tower is a fantastic place to to take in breath taking views. You can go during the day or late evening to see the sunset. </p>
                       
 
                         </div>
 
-                        <div class="col-12">
+                        <div class="col-12 neigborhoodsection">
                         <h6><i class="sf sf-right-arrow infoicon"></i> How to Get There </h6>
                         <p> Coit tower located at 1 Telegraph Hill Blvd in San Francisco. For directions from different parts of the Bay Area, <a href="#"> click here. </a> </p>
                         </div>
@@ -58,7 +58,7 @@
                        
                     </div>
 
-                    <div class=" col-5 offset-2">
+                    <div class=" col-5 offset-2 neigborhoodsection">
                           <h6><i class="sf sf-right-arrow infoicon"></i> Public Transportation </h6>
                         <p> Coit Tower is reachable by San Francisco Muni. Muni’s #39 Coit bus travels between Coit Tower and Fisherman’s Wharf.  For more information, call Muni at <b>415-673-6864</b> or check the <a href="#"> SFMTA trip planner.</a> </p>
 
