--- a/fog/landmarks/palace.html
+++ b/fog/landmarks/palace.html
@@ -24,7 +24,7 @@
                     data-anchor-target="#palace-home"
                 ><img src="../lib/images/palace-inner.jpg"></div>
                 <a class="btn" href="../index.html#palace"><i class="sf sf-left-arrow backicon"></i> Go Back</a>
-                <div class="content" data--100-top="opacity:0;" data-100="opacity:1";>
+                <div class="content" data--150-top="opacity:0;" data-100="opacity:1";>
                     <div class="container">
                     <h1 class="neighborhoodtitle"><i class="sf sf-palace-of-fine-arts nbhdicon"></i> The Palace of Fine Arts</h1>
                     <div class="neighborhood">
@@ -40,25 +40,25 @@
                 <div class="content">
                 <div class="container">
                     <div class=" col-5">
-                        <div class="col-12">
+                        <div class="col-12 neigborhoodsection">
                             <h6><i class="sf sf-right-arrow infoicon"></i> When to Go </h6>
                              <p> The Palace of Fine Arts is a fantastic place to hang out for an hour or more throughout the year, from sunrise to sunset. </p>
                       
 
                         </div>
 
-                        <div class="col-12">
+                        <div class="col-12 neigborhoodsection">
                         <h6><i class="sf sf-right-arrow infoicon"></i> How to Get There </h6>
                         <p> The Palace of Fine Arts Theater is located at 3301 Lyon Street in San Francisco. For directions from different parts of the Bay Area, <a href="#"> click here. </a> </p>
                         </div>
-                        <div class="col-12">
+                        <div class="col-12 neigborhoodsection">
                         <h6><i class="sf sf-right-arrow infoicon"></i> Where to Park </h6>
                         <p>  Free parking is available along Palace Drive, Yacht Drive, and on Bay and Lyon streets but expect weekends to be crowded. </p>
                         </div>
                        
                     </div>
 
-                    <div class=" col-5 offset-2">
+                    <div class=" col-5 offset-2 neigborhoodsection">
                           <h6><i class="sf sf-right-arrow infoicon"></i> Public Transportation </h6>
                         <p>  The Palace of Fine Arts is easily accessible by San Francisco Muni buses #30, #43, #28, and #29. Muni bus lines #22, #41, and #45 also stop in the vicinity. From Fisherman’s Wharf take the #30 Stockton bus. For more information, call Muni at <b>415-673-6864</b> or check the <a href="#"> SFMTA trip planner.</a> </p>
 
