solved conflict with ben

--- a/fog/landmarks/alamo.html
+++ b/fog/landmarks/alamo.html
@@ -24,7 +24,7 @@
                     data-anchor-target="#alamo-home"
                 ><img src="../lib/images/alamo-inner.png"></div>
                 <a class="btn" href="../index.html#alamo"><i class="sf sf-left-arrow backicon"></i> Go Back</a>
-                <div class="content" data--100-top="opacity:0;" data-100="opacity:1";>
+                <div class="content" data--150-top="opacity:0;" data-100="opacity:1";>
                     <div class="container">
                     <h1 class="neighborhoodtitle"><i class="sf sf-painted-ladies nbhdicon"></i> Alamo Square</h1>
                     <div class="neighborhood">
@@ -64,7 +64,7 @@
                             from Church Street at Market, take the #22 Fillmore bus to Hayes Street. Alamo Square Park is one block over to the west, at Steiner Street. Or from Hayes Valley, go west on Hayes Street about three blocks past the commercial sector. For more information, call Muni at <b>415-673-6864</b> or check the <a href="#"> SFMTA trip planner.</a> </p>
 
                         <h6><i class="sf sf-right-arrow infoicon"></i> What to bring and what to wear </h6>
-                        <p>A walk with your dog can a nice addition to this senic view. Pack up some food and drink and enjoy a day in the park with the kids. Because you’ll be going out, you’ll want to bring layers to be prepared for all weather conditions. Snacks and a camera are also recommended.</p>
+                        <p>A walk with your dog can be a nice addition to this senic view. Pack up some food and drink and enjoy a day in the park with the kids. Because you’ll be going out, you’ll want to bring layers to be prepared for all weather conditions. Snacks and a camera are also recommended.</p>
                     
                         <h6><i class="sf sf-right-arrow infoicon"></i> Map</h6>
                         <a href="#" class="toggle-map menu-bottom">Click to see this location on a map</h6></a>
