--- a/fog/landmarks/alamo.html
+++ b/fog/landmarks/alamo.html
@@ -11,19 +11,19 @@
     </style>
 </head>
 <body>
-    <div id="position-log">0</div>
+<!--    <div id="position-log">0</div>-->
     <div class="project-wrap">
     <div class="skrollr-wrapper">
         <section class="homeSlide innerpage" id="alamo-home">
              <div class="slide-container">
                <div class="bg-image"
                     data-top="transform:scale(1) translateX(0px);"
-                    data-1800="transform:scale(1.1) translateX(-150px);"
-                    data-2700="transform:scale(1.2) translateX(-300px);"
-                    data-4000="transform:scale(1.4) translateX(-450px);"
+                    data-200="transform:scale(1.1) translateX(-150px);"
+                    data-400="transform:scale(1.2) translateX(-300px);"
+                    data-600="transform:scale(1.4) translateX(-450px);"
                     data-anchor-target="#alamo-home"
                 ><img src="../lib/images/alamo-inner.png"></div>
-                <a class="btn" href="../index.html#alamo"><i class="sf sf-left-arrow backicon"></i> Go Back</a>
+                <a class="btn" href="../index.html"><i class="sf sf-left-arrow backicon"></i> Go Back</a>
                 <div class="content" data--150-top="opacity:0;" data-100="opacity:1";>
                     <div class="container">
                     <h1 class="neighborhoodtitle"><i class="sf sf-painted-ladies nbhdicon"></i> Alamo Square</h1>
@@ -105,10 +105,10 @@
     // Init Skrollr
     var s = skrollr.init(
     {
-            render: function(data){
-                //log current scroll position
-                $('#position-log').text(data.curTop);
-            }
+//            render: function(data){
+//                //log current scroll position
+//                $('#position-log').text(data.curTop);
+//            }
         }
     );
 
